--- a/about.html
+++ b/about.html
@@ -343,9 +343,10 @@
 
                 <div class="col-12 col-lg-6">
 
-                      <video  width="600" height="<335></335>" controls>
-                        <source src="video.mp4" type="video/mp4">
-                      </video>
+                    <div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/lPNYdSZRSdg" 
+						frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      </div> 
 
                 </div>
             </div>
